fixing more contrast errors

--- a/style.css
+++ b/style.css
@@ -192,7 +192,7 @@ footer {
 }
 
 .web-project a {
-    color: var(--secondary-color);
+    color: #97361C;
 }
 
 .section-title {
